Fix #3044 "Misaligned number and text in error summary"

--- a/src/main/assets/xbl/orbeon/error-summary/error-summary.less
+++ b/src/main/assets/xbl/orbeon/error-summary/error-summary.less
@@ -38,7 +38,7 @@
 
         &> li {
             border: 2px solid;
-            padding: 5px;
+            padding: 10px;
             margin-bottom: 5px;
             list-style-position: inside;
 
@@ -50,7 +50,7 @@
 
         .fr-error-number, .fr-error-link, .fr-error-alert {
 
-            padding: 2px 5px;
+            padding: 2px 0;
             vertical-align: top;
         }
 
@@ -61,7 +61,7 @@
         }
 
         .fr-error-link {
-            display: block;
+            display: inline;
         }
 
         .fr-error-alert {
